--- a/components/banner/banner.wxml
+++ b/components/banner/banner.wxml
@@ -1,8 +1,7 @@
 <swiper circular class="banner" indicator-dots autoplay interval="3000">
-  <block wx:for="{{banners}}" wx:key="targetId">
-    <swiper-item>
+  <block wx:for="{{banners}}" wx:key="id">
+    <swiper-item bindtap="onBannerTap" data-video-url="{{item.videoUrl}}">
       <image src="{{item.url}}" class="banner-image" mode="aspectFill"/>
     </swiper-item>
   </block>
 </swiper>
-
