--- a/components/video-item/video-item.wxss
+++ b/components/video-item/video-item.wxss
@@ -33,8 +33,8 @@
 .info .count::before {
   content: "";
   position: absolute;
-  left: -2rpx;
-  top: 4rpx;
+  left: 6rpx;
+  top: -32rpx;
   width: 30rpx;
   height: 24rpx;
   background-size: cover;
@@ -44,7 +44,7 @@
 .content {
   margin-top: 10rpx;
   font-size: 28rpx;
-  
+  margin-left: 10rpx;
   /* 显示两行 */
   overflow: hidden; 
   text-overflow: ellipsis;
