--- a/pages/detail-video/detail-video.wxss
+++ b/pages/detail-video/detail-video.wxss
@@ -8,4 +8,16 @@ page {
 .title {
   padding: 30rpx 30rpx;
   font-size: larger;
+  /* background-color: red; */
+}
+.video-list {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 0 10rpx;
+  position: relative;
+  /* background-color: green; */
+}
+.item {
+  width: 42%;
 }
