--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,7 +1,7 @@
 <banner></banner>
 <view class="box">
   <view class="wx">
-    <image src="../../assets/img/icon.png" mode="" class="wxicon" />
+    <image src="../../assets/img/wxicon.png" mode="" class="wxicon" />
     <text selectable>wx:111111</text>
     <text class="tip">（长按复制）</text>
   </view>
