--- a/pages/detail-video/detail-video.wxml
+++ b/pages/detail-video/detail-video.wxml
@@ -4,15 +4,12 @@
 <view class="title">{{videoName}}</view>
 <!-- <view class="info">
   <view class="label">语言ID:</view> <view>{{languageId}}</view>
-</view> -->
-<!-- <view class="info">
+</view>
+<view class="info">
   <view class="label">性别:</view> <view>{{sex === 1 ? '男' : '女'}}</view>
 </view> -->
-
-
-  <view class="video-list" style="top: 5px">
-    <block wx:for="{{videoList}}" wx:key="id">
-      <video-item class="item" itemData="{{item}}" bind:tap="onVideoItemTap" data-item="{{item}}"/>
-    </block>
-  </view>
-
+<view class="video-list" style="top: 5px">
+  <block wx:for="{{videoList}}" wx:key="id">
+    <video-item class="item" itemData="{{item}}" bindtap="onVideoItemTap" data-item="{{item}}"/>
+  </block>
+</view>
