--- a/pages/detail-author/detail-author.wxss
+++ b/pages/detail-author/detail-author.wxss
@@ -1,4 +1,5 @@
-/* pages/detail-author/detail-author.wxss */.recommend-list {
+/* pages/detail-author/detail-author.wxss */
+.recommend-list {
   /* position: relative; */
   /* top: 40px; */
   padding: 50rpx 0;
