--- a/components/audio-bar/audio-bar.wxml
+++ b/components/audio-bar/audio-bar.wxml
@@ -5,12 +5,12 @@
   </view>
   <view class="info">
     <view class="title">
-      <block wx:if="{{itemData.dubbingActorName}}">
-        {{itemData.dubbingActorName}} - 
+      <block wx:if="{{showAuthorInfo && itemData.dubbingActorId}}">
+        {{dubbingActorName}} - 
       </block>  
       {{itemData.name}}
     </view>
-    <view class="more" bindtap="viewOtherSamples">
+    <view wx:if="{{showAuthorInfo}}" class="more" bindtap="viewOtherSamples">
       点击查看此老师其他样音
     </view>
   </view>
