--- a/components/background/background.wxml
+++ b/components/background/background.wxml
@@ -1,3 +1,3 @@
 <view class="box">
-<image src="../../assets/img/bg2.png" mode=""/>
+<!-- <image src="../../assets/img/bg2.png" mode=""/> -->
 </view>
