--- a/components/background/background.wxss
+++ b/components/background/background.wxss
@@ -3,10 +3,11 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 72%;
+  height: 100%;
   z-index: -5;
+  background: linear-gradient(#fada18,#f28e0e);
 }
-.box image {
+/* .box image {
   width: 100%;
   height: 100%;
-}
+} */
