--- a/components/video-item/video-item.wxss
+++ b/components/video-item/video-item.wxss
@@ -1,5 +1,5 @@
 .item {
-  margin-bottom: 30rpx;
+  /* margin-bottom: 30rpx; */
 }
 
 .album {
@@ -7,10 +7,18 @@
   border-radius: 12rpx;
   overflow: hidden;
   display: flex;
+  padding-top: 56.25%;
+
 }
 
 .album .image {
   width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .info {
