--- a/pages/audiolist/audiolist.wxml
+++ b/pages/audiolist/audiolist.wxml
@@ -1,4 +1,3 @@
-<!-- pages/audiolist/audiolist.wxml -->
 <background></background>
 <banner></banner>
 <view class="tag-box">
@@ -15,6 +14,15 @@
 </view>
 <view class="recommend-list">
   <block wx:for="{{audioList}}" wx:key="id">
-    <audio-bar itemData="{{item}}" bind:shareAudio="handleShareAudio"></audio-bar>
+    <audio-bar 
+  itemData="{{item}}" 
+  currentPlayingId="{{currentPlayingId}}" 
+  isPlayingGlobal="{{item.id === currentPlayingId}}" 
+  bind:shareAudio="handleShareAudio" 
+  bind:playAudio="handlePlayAudio">
+</audio-bar>
+
+
+
   </block>
 </view>
