--- a/pages/detail-author/detail-author.wxml
+++ b/pages/detail-author/detail-author.wxml
@@ -1,10 +1,11 @@
+<!-- pages/detail-author/detail-author.wxml -->
 <background></background>
 <view class="tag-box">
-  <tag sort="情绪" tagList="{{tag1}}"></tag>
-  <tag sort="类型" tagList="{{tag2}}"></tag>
+  <tag sort="情绪" tagList="{{tag1}}" bind:tagClick="onTagClick"></tag>
+  <tag sort="类型" tagList="{{tag2}}" bind:tagClick="onTagClick"></tag>
 </view>
 <view class="recommend-list">
   <block wx:for="{{audioList}}" wx:key="id">
-    <audio-bar itemData="{{item}}" bind:shareAudio="handleShareAudio"></audio-bar>
+    <audio-bar itemData="{{item}}" bind:shareAudio="handleShareAudio" showAuthorInfo="{{false}}"></audio-bar>
   </block>
 </view>
