--- a/pages/detail-author/detail-author.wxss
+++ b/pages/detail-author/detail-author.wxss
@@ -6,6 +6,7 @@
   border-radius: 40rpx;
   background-color: #f7f6fb;
   width: 100%;
+  flex:1;
 }
 .tag-box {
   margin: 37rpx 0;
@@ -13,4 +14,7 @@
 }
 page {
   background-color: #f7f6fb;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
