--- a/pages/detail-tag/detail-tag.wxss
+++ b/pages/detail-tag/detail-tag.wxss
@@ -4,9 +4,10 @@
   /* top: 40px; */
   padding: 50rpx 0;
   padding-bottom: 230rpx;
-  border-radius: 40rpx;
+  border-radius: 40rpx 40rpx 0 0;
   background-color: #f7f6fb;
   width: 100%;
+  flex:1;
 }
 .tag-box {
   margin: 37rpx 0;
@@ -14,4 +15,7 @@
 }
 page {
   background-color: #f7f6fb;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
