--- a/pages/detail-video/detail-video.wxss
+++ b/pages/detail-video/detail-video.wxss
@@ -1,4 +1,4 @@
-/* pages/detail-video/detail-video.wxss */
+/* 
 page {
   background-color: #f7f6fb;
 }
@@ -8,7 +8,7 @@ page {
 .title {
   padding: 30rpx 30rpx;
   font-size: larger;
-  /* background-color: red; */
+
 }
 .video-list {
   display: flex;
@@ -16,8 +16,40 @@ page {
   flex-wrap: wrap;
   padding: 0 10rpx;
   position: relative;
-  /* background-color: green; */
+ 
 }
 .item {
   width: 42%;
+} */
+
+page {
+  background-color: #f7f6fb;
+}
+
+.video {
+  width: 100%;
+}
+
+.title {
+  padding: 30rpx 30rpx;
+  font-size: larger;
+}
+
+.video-list {
+  display: flex;
+  justify-content: space-between; /* 修改为 space-between */
+  flex-wrap: wrap;
+  padding: 0 40rpx;
+  position: relative;
+}
+
+.item {
+  width: 48%; 
+  margin-bottom: 30rpx; /* 增加底部间距 */
+}
+
+/* 为奇数时的最后一个视频项设置样式 */
+.video-list .item:nth-last-child(2):nth-child(odd) {
+  width: 48%; /* 保持与其他项目一致 */
+  margin-right: 0; /* 确保没有右边距 */
 }
