添加logo和标题

--- a/components/audio-bar/audio-bar.wxml
+++ b/components/audio-bar/audio-bar.wxml
@@ -5,7 +5,7 @@
   </view>
   <view class="info">
     <view class="title">
-      <block wx:if="{{showAuthorInfo && itemData.dubbingActorId}}">
+      <block wx:if="{{showAuthorInfo && itemData.dubbingActorId && dubbingActorName}}">
         {{dubbingActorName}} - 
       </block>  
       {{itemData.name}}
